--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=notes
-
+#spring.datasource.driver-class-name=com.mongodb.jdbc.MongoDriver
 spring.application.name=Notes Service
 server.port=8080
 
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 # App Properties
 rashid.app.jwtSecret= RashidSecretKey
 rashid.app.jwtExpirationMs= 86400000
